test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bgd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd
    spec:
      containers:
        - image: docker.io/joost1986/openshift-test:v1
          name: openshift-test
          env:
            - name: COLOR
              value: "green"
          resources: {}
